WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282566
Fix issue with suspension interval being too aggressive after reboot
https://bugs.webkit.org/show_bug.cgi?id=282566
Summary
Fix issue with suspension interval being too aggressive after reboot
Ben Nham
Reported
2024-11-04 15:24:14 PST
2
Attachments
Add attachment
proposed patch, testcase, etc.
Ben Nham
Comment 1
2024-11-04 15:24:15 PST
<
rdar://problem/138932291
>
Ben Nham
Comment 2
2024-11-04 15:28:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36154
Ben Nham
Comment 3
2024-11-04 15:32:26 PST
<
rdar://139240136
>
EWS
Comment 4
2024-11-05 09:16:46 PST
Committed
286159@main
(0188a98cb772): <
https://commits.webkit.org/286159@main
> Reviewed commits have been landed. Closing PR #36154 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug