Fix issue with suspension interval being too aggressive after reboot https://bugs.webkit.org/show_bug.cgi?id=282566 rdar://139240136

Reviewed by Per Arne Vollan.

If aggressive suspension on memory pressure is enabled (285426@main), then the browser incorrectly
sets the suspension delay for all processes to the aggressive interval if it was launched within the
first `criticalMemoryPressureCheckInterval` (30 min) of the system being booted. This led to a
Membuster regression.

The reason for this is that we use `ApproximateTime` to store the time of the last memory pressure
event. That timestamp is 0 when the system is booted. So to the code it looks like the
WebProcessPool last got a memory pressure event when the system booted.

To fix this, initialize `m_lastCriticalMemoryPressureStatusTime` to some time period in the past
rather than the zero value.

* Source/WebKit/UIProcess/WebProcessPool.cpp:
(WebKit::criticalMemoryPressureCheckInterval):
* Source/WebKit/UIProcess/WebProcessPool.h:

Canonical link: https://commits.webkit.org/286159@main